# rag-chat

./: .dockerignore  .env.example  .gitignore  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: api.py  api_models.py  api_utils.py
containers/: api.Dockerfile  app.Dockerfile  base.Dockerfile  pull_model.Dockerfile
db_services/: db_initializer.py
exceptions/: custom_exceptions.py
llm_services/: llm_chains.py  llm_loaders.py  llm_utils.py
utils/: validations.py
